# bcraft-recipes

./: .coverage  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  README.md  docker-compose.yml  populate_db.py  pyproject.toml  specification.md
app/: auth.py  config.py  crud.py  db.py  exception.py  handler.py  main.py  model.py  router.py  schema.py  util.py
app/api/: __init__.py  route.py
app/crud/: image.py  recipe.py
app/database/: tools.py
app/model/: image.py  recipe.py  user.py
migrations/: env.py
migrations/versions/: 1a38d605ab1b_initial.py  22d7c5661546_images.py  4982ea669b72_recipe_rate.py  6de4c1bded16_image_original_filename.py  7edd90572d0c_initial.py  d9a83e297270_recipe_and_step_image.py  db328dd91c23_step_duration.py  f78be15f8333_auth.py  fe4da3bed938_initial.py
tests/: conftest.py  test_database.py  test_util.py
tests/htmlcov/: d_33d94c5b4d36d1aa___init___py.html  d_33d94c5b4d36d1aa_base_py.html  d_33d94c5b4d36d1aa_tools_py.html  d_38066f6e2b803d9d___init___py.html  d_38066f6e2b803d9d_route_py.html  d_38066f6e2b803d9d_schema_py.html  d_5f5a17c013354698___init___py.html  d_5f5a17c013354698_auth_py.html  d_5f5a17c013354698_config_py.html  d_5f5a17c013354698_exception_py.html  d_5f5a17c013354698_handler_py.html  d_5f5a17c013354698_main_py.html  d_5f5a17c013354698_util_py.html  d_8587907102433a32___init___py.html  d_8587907102433a32_image_py.html  d_8587907102433a32_recipe_py.html  d_8587907102433a32_user_py.html  d_cfb6adc3f81c8e3c___init___py.html  d_cfb6adc3f81c8e3c_route_py.html  d_db557b0c09623292___init___py.html  d_db557b0c09623292_dependency_py.html  d_db557b0c09623292_route_py.html  d_db557b0c09623292_schema_py.html  d_e2405abfd7b16e4b___init___py.html  d_e2405abfd7b16e4b_image_py.html  d_e2405abfd7b16e4b_recipe_py.html  d_f42c043ada0ccba9___init___py.html  d_f42c043ada0ccba9_dependency_py.html  d_f42c043ada0ccba9_route_py.html  index.html  (+2 more)
(+11 files in other folders)
