[tool.poetry]
name = "bcraft-recipes"
version = "0.1.0"
description = "Test task from Bcraft company"
authors = ["Gleb <maxwellgleb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"
SQLAlchemy = {extras = ["asyncio"], version = "~2.0.10"}
pydantic = {extras = ["dotenv"], version = "~1.10.7"}
alembic = "~1.10.4"
fastapi = {extras = ["all"], version = "~0.95.1"}
fastapi-filter = "^0.6.0"
fastapi-pagination = "~0.12.2"
asyncpg = "~0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
